[package]
name = "viste_reactive"
version = "0.1.0"
authors = ["SpacialCircumstances <SpacialCircumstances@users.noreply.github.com>"]
edition = "2018"

[dependencies]
slab = "0.4.2"
log = "0.4"

[dev-dependencies]
simple_logger = "1.11.0"
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
